Implement user authentication and authorization: add JWT support, create user and login endpoints, and enhance user management features.